2000-12-14  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/prog-ref.texi (Partition types): Rewrite the footnotes.
	Suggested by Ralf.Medow@t-online.de (Ralf Medow).
	
2000-12-14  OKUJI Yoshinori  <okuji@gnu.org>

	From Erik Schoenfelder <schoenfr@gaertner.de>:
	* util/grub-install.in (convert): Revised the fix for floppy
	device handling.
	
2000-12-14  OKUJI Yoshinori  <okuji@gnu.org>

	From HORIKAWA Kazunori <kaz-hori@tkd.att.ne.jp>:
	* stage2/bios.c (get_diskinfo): Append 16 bytes dummy data to
	DRP, because the BIOS of Thinkpad X20 write a garbage beyond the
	size of the structure.
	
2000-12-09  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/disk_io.c (next_partition): Mask out bsd partition sub
	type when checking if last partition was a bsd partition.
	Reported by Heikki Vatiainen <hessu@cs.tut.fi>.
	
2000-12-09  OKUJI Yoshinori  <okuji@gnu.org>

	From Leendert Meyer <leen.meyer@home.nl>:
	* util/grub-install.in (convert): If a floppy device is
	specified, remove everything from $tmp_part.
	
2000-12-09  OKUJI Yoshinori  <okuji@gnu.org>

	* lib/device.c [__linux__] (write_to_partition): Use strcpy
	instead of strcat, to overwrite "/disc". Reported by Thiago
	Macieira <thiagom@mail.com>.
	
2000-12-05  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_minix.c (minix_mount): Corrected the check for
	IS_PC_SLICE_TYPE_MINIX; minix was only working if slice type was
	wrong! Reported by Ralf Medow <ralf.medow@t-online.de>.
	
2000-11-27  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c: Handle items with old version key on
	new version reiserfs partition.
	(K_OFFSET): Removed.
	(IH_KEY_OFFSET): New Macro, which checks item head version.
	(IH_KEY_ISOFFSET): Likewise.
	(reiserfs_read): Use new macros.
	(reiserfs_dir): Fixed version check for >4GB stat entries.
	
2000-11-27  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/common.c (init_bios_info) [!STAGE1_5]: Don't call
	track_int13, because the current implementation hangs up in some
	environments.
	